fixing catarse logo padding so it will align better with our grid

--- a/app/assets/stylesheets/content/_header.sass
+++ b/app/assets/stylesheets/content/_header.sass
@@ -10,7 +10,7 @@
     margin-right: 20px
     height: 54px
     border: none
-    background: url($images_path+"logo164x54.png") left top no-repeat
+    background: url($images_path+"logo.png") left top no-repeat
     text-indent: -9999em
   nav
     a
